<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/_2sdp"
    android:paddingStart="@dimen/_2sdp"
    android:orientation="vertical">

<!--  Layout for Pizza name, image  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pizza_name_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pizza_order_iv"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:src="@drawable/new_margherita_veg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/pizza_order_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:fontFamily="@font/rounded_elegance"
            android:maxLines="1"
            android:text="@string/new_margherita_veg"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pizza_order_iv" />

        <TextView
            android:id="@+id/pizza_order_detail_tv"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:fontFamily="@font/rounded_elegance"
            android:maxLines="3"
            android:text="@string/new_margherita_veg_details"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/pizza_order_iv"
            app:layout_constraintTop_toBottomOf="@+id/pizza_order_name_tv" />

        <TextView
            android:id="@+id/crust_size_order_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:maxLines="2"
            android:text="@string/crust_size_order_txt"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/sp_12"
            android:fontFamily="@font/rounded_elegance"
            app:layout_constraintStart_toEndOf="@+id/pizza_order_iv"
            app:layout_constraintTop_toBottomOf="@+id/pizza_order_detail_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/price_tv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/pizza_default_price"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/rounded_elegance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizza_name_constraint_layout"
            android:layout_marginTop="@dimen/_4sdp"
            tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/feedback_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:weightSum="2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_tv_cart">

        <TextView
            android:id="@+id/order_complete_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_6sdp"
            android:textColor="@color/black"
            android:visibility="invisible"
            android:text="@string/order_completed"
            android:fontFamily="@font/rounded_elegance"/>

        <TextView
            android:id="@+id/delete_order_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:gravity="end"
            android:fontFamily="@font/rounded_elegance"
            android:text="@string/delete_order"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>

    <View
        android:id="@+id/dot_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0_5dp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:background="@color/silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_linear_layout"/>

    <ImageView
        android:id="@+id/pizza_veg_non_veg_label_iv"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:src="@drawable/veg_label"
        app:layout_constraintStart_toStartOf="@+id/price_tv_cart"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toBottomOf="@+id/pizza_name_constraint_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>