<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_12sdp"
    android:layout_marginRight="@dimen/_12sdp"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/forgot_password_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/rounded_elegance"
            android:text="@string/forgot_your_password"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/rounded_elegance"
            android:gravity="center"
            android:text="@string/dont_worry_message"
            android:textColor="@color/black"
            android:textSize="14sp" />

<!--   This include tag is used to shorten the length of this
        this xml file, that is why we have created
        another layout of entering email and phone number
        so that we can use that layout in here -->
        <include
            android:id="@+id/custom_edittext_forgot_password"
            layout="@layout/forgot_password_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_5sdp" />

<!--   Here otp layout visibility is invisible
    when user enter its email or phone number and click on
    the send button, this layout visibility will set to visible-->
        <LinearLayout
            android:id="@+id/otp_edt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:orientation="vertical"
            android:visibility="invisible"
            android:padding="@dimen/_6sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/rounded_elegance"
                android:gravity="center"
                android:text="@string/verification_code_send_message"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/otp_edit_text"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_28sdp"
                android:background="@drawable/button_border_theme_color"
                android:fontFamily="@font/rounded_elegance"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:padding="10dp"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>

        <include
            android:id="@+id/submit_custom_attribute_forgot_btn"
            layout="@layout/common_rounded_filled_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_12sdp" />

    </LinearLayout>
</ScrollView>
