<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pizza_menu_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_2sdp"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/pizza_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:src="@drawable/new_margherita_veg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:fontFamily="@font/rounded_elegance"
        android:text="$ 12"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/pizza_iv">

        <TextView
            android:id="@+id/pizza_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_toStartOf="@+id/veg_non_veg_label_tag_iv"
            android:fontFamily="@font/rounded_elegance"
            android:maxLines="1"
            android:paddingTop="@dimen/_6sdp"
            android:text="@string/pizza_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/veg_non_veg_label_tag_iv"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/veg_label"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/pizza_description_tv"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pizza_name_tv"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/rounded_elegance"
            android:maxLines="1"
            android:text="@string/new_margherita_veg_details"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/delete_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pizza_name_tv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/_4sdp"
            android:text="@string/order_now_btn_txt"
            android:textColor="@color/text_color"
            android:visibility="invisible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0_5dp"
            android:background="@color/silver"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_2sdp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>